comentar codigo, creación del personaje, propiedad fisica para el salto del personaje, y movimientos de este

--- a/juego2020/imagenes.qrc
+++ b/juego2020/imagenes.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/imagen">
         <file>Overlord_III_Episode_13 (1).png</file>
         <file>momonga1.png</file>
+        <file>momonga perfil.png</file>
     </qresource>
 </RCC>
