Intentos, fallos, niveles, enemigos, e imagenes

--- a/juego2020/imagenes.qrc
+++ b/juego2020/imagenes.qrc
@@ -3,5 +3,8 @@
         <file>Overlord_III_Episode_13 (1).png</file>
         <file>momonga1.png</file>
         <file>momonga perfil.png</file>
+        <file>enemigo.png</file>
+        <file>bluefire.png</file>
+        <file>Overlord_III_EP09_022 (1).png</file>
     </qresource>
 </RCC>
