--- a/juego2020/imagenes.qrc
+++ b/juego2020/imagenes.qrc
@@ -6,5 +6,7 @@
         <file>enemigo.png</file>
         <file>bluefire.png</file>
         <file>Overlord_III_EP09_022 (1).png</file>
+        <file>albedochibi (1).png</file>
+        <file>shalltear.png</file>
     </qresource>
 </RCC>
