--- a/juego2020/imagenes.qrc
+++ b/juego2020/imagenes.qrc
@@ -8,5 +8,6 @@
         <file>albedochibi (1).png</file>
         <file>shalltear.png</file>
         <file>bluefire.png</file>
+        <file>fo.png</file>
     </qresource>
 </RCC>
