--- a/juego2020/imagenes.qrc
+++ b/juego2020/imagenes.qrc
@@ -9,5 +9,6 @@
         <file>shalltear.png</file>
         <file>bluefire.png</file>
         <file>fo.png</file>
+        <file>momonga2.png</file>
     </qresource>
 </RCC>
