objetivos primer nivel, colisión

--- a/juego2020/imagenes.qrc
+++ b/juego2020/imagenes.qrc
@@ -9,6 +9,7 @@
         <file>bluefire.png</file>
         <file>fo.png</file>
         <file>momonga2.png</file>
+        <file>Ring_of_Ainz_Ooal_Gown (1).png</file>
         <file>Overlord_III_EP09_022 (1).png</file>
     </qresource>
 </RCC>
