intento puntaje y vidas(fail), creacion de vidas extra y nuevo objetivo en nivel 2

--- a/juego2020/imagenes.qrc
+++ b/juego2020/imagenes.qrc
@@ -11,5 +11,7 @@
         <file>momonga2.png</file>
         <file>Ring_of_Ainz_Ooal_Gown (1).png</file>
         <file>Overlord_III_EP09_022 (1).png</file>
+        <file>swords (1).png</file>
+        <file>simbolo.png</file>
     </qresource>
 </RCC>
