--- a/juego2020/imagenes.qrc
+++ b/juego2020/imagenes.qrc
@@ -13,5 +13,6 @@
         <file>Overlord_III_EP09_022 (1).png</file>
         <file>swords (1).png</file>
         <file>simbolo.png</file>
+        <file>objetivos.png</file>
     </qresource>
 </RCC>
