que pasa si ganas o pierdes?

--- a/juego2020/imagenes.qrc
+++ b/juego2020/imagenes.qrc
@@ -14,5 +14,7 @@
         <file>swords (1).png</file>
         <file>simbolo.png</file>
         <file>objetivos.png</file>
+        <file>nazarik_dungeon.png</file>
+        <file>castigo.png</file>
     </qresource>
 </RCC>
