boqueos en niveles

--- a/juego2020/imagenes.qrc
+++ b/juego2020/imagenes.qrc
@@ -16,5 +16,7 @@
         <file>objetivos.png</file>
         <file>nazarik_dungeon.png</file>
         <file>castigo.png</file>
+        <file>momonga3.png</file>
+        <file>bolaFuego.png</file>
     </qresource>
 </RCC>
