--- a/juego2020/mainwindow.ui
+++ b/juego2020/mainwindow.ui
@@ -96,6 +96,19 @@
      <string>Puntaje</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="pushButton_3">
+    <property name="geometry">
+     <rect>
+      <x>1220</x>
+      <y>290</y>
+      <width>75</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>GUARDAR</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
