registro e inicio de sesión

--- a/juego2020/mainwindow.ui
+++ b/juego2020/mainwindow.ui
@@ -122,6 +122,19 @@
      <string>CARGAR</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="pushButton_5">
+    <property name="geometry">
+     <rect>
+      <x>1220</x>
+      <y>420</y>
+      <width>75</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>REGISTRO</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
