multi-player casi completo

--- a/juego2020/imagenes.qrc
+++ b/juego2020/imagenes.qrc
@@ -3,8 +3,6 @@
         <file>momonga1.png</file>
         <file>momonga perfil.png</file>
         <file>enemigo.png</file>
-        <file>albedochibi (1).png</file>
-        <file>shalltear.png</file>
         <file>bluefire.png</file>
         <file>fo.png</file>
         <file>momonga2.png</file>
@@ -15,8 +13,16 @@
         <file>objetivos.png</file>
         <file>nazarik_dungeon.png</file>
         <file>castigo.png</file>
+        <file>Overlord_III_Episode_13 (1).png</file>
+        <file>momogawar.png</file>
+        <file>ultimateworld.png</file>
+        <file>momongasword (1).png</file>
+        <file>Jaldabaoth (1).png</file>
+        <file>over.png</file>
+        <file>cetroainz.png</file>
+        <file>battle.jpg</file>
+        <file>Fondo-blanco-pagina-01 (1).png</file>
         <file>momonga3.png</file>
         <file>bolaFuego.png</file>
-        <file>Overlord_III_Episode_13 (1).png</file>
     </qresource>
 </RCC>
