movimiento circular, multijugador, pequeños detalles

--- a/juego2020/imagenes.qrc
+++ b/juego2020/imagenes.qrc
@@ -7,7 +7,6 @@
         <file>fo.png</file>
         <file>momonga2.png</file>
         <file>Ring_of_Ainz_Ooal_Gown (1).png</file>
-        <file>Overlord_III_EP09_022 (1).png</file>
         <file>swords (1).png</file>
         <file>simbolo.png</file>
         <file>objetivos.png</file>
@@ -24,5 +23,7 @@
         <file>Fondo-blanco-pagina-01 (1).png</file>
         <file>momonga3.png</file>
         <file>bolaFuego.png</file>
+        <file>fireball_.png</file>
+        <file>Overlord_III_EP09_022 (1).png</file>
     </qresource>
 </RCC>
